--- a/configs/dev.env
+++ b/configs/dev.env
@@ -1,14 +1,9 @@
 # Server configuration
 SERVER_ADDRESS=localhost:8080
 
-# Database configuration
-DATABASE_USERNAME=testuser
-DATABASE_HOST=localhost
-DATABASE_NAME=testdb
-
 # CORS configuration
 CORS_ALLOWED_ORIGIN=http://localhost:3000
 
 # Database driver and connection source
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://testuser:password@localhost:5432/testdb?sslmode=disable
+DB_SOURCE=postgresql://dusan.dimic:pa55word@localhost:5432/gorest?sslmode=disable
