--- a/configs/dev.env
+++ b/configs/dev.env
@@ -6,4 +6,4 @@ CORS_ALLOWED_ORIGIN=http://localhost:3000
 
 # Database driver and connection source
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://dusan.dimic:pa55word@localhost:5432/gorest?sslmode=disable
+DB_SOURCE=postgresql://postgres:postgres@localhost:5432/gorest?sslmode=disable
